cod-tools (unreleased)

cod-tools (2.6)

  * Added:
    - cif_molecule:
      - polymer basis string was added to the output (respective tag
        '_cod_molecule_polymer_basis');
      - the --special-disorder-operator-set, --random-seed options and
        --vdw-distance-factor options.
    - COD::Algebra::GaussJordan:
      - the module itself;
      - 'backward_elimination()' for polymer basis string calculation.
    - COD::AtomNeighbours:
      - the get_max_vdw_radius() subroutine.
  * Changed:
    - cif_molecule:
      - updated the polymer handling logic to always explicitly mark
        molecule as non-polymeric when the molecule is not a polymer
        ('_cod_molecule_is_polymer' data item is set to 'no');
      - updated the polymer handling logic to suppress additional
        polymer information when '--max-polymer-span' is set to '0'.
        Suppressed data items include '_cod_molecule_polymer_dimension'
        and '_cod_molecule_polymer_basis';
      - modified the handling of atom disorder around a special position.
        The logic was updated to determine symmetry of atom groups that
        are disordered around a special position and apply only
        crystal symmetry operators from cosets of this symmetry group
        to the disordered atom group;
      - changed the default option from --no-use-special-disorder-symmetry
        to --use-special-disorder-symmetry;
    - COD::CIF::Data::CODNumbers:
      - adding two dashes ('--') to a warning message generated in
        the cif_fill_data() subroutine.
    - COD::CIF::Data::SymmetryGenerator:
      - modified the test_bump() subroutine to accept an optional parameter
        specifying the type of atomic radii that should be used;
      - renamed an option in the symops_apply_modulo1() subroutine from
        'disregard_symmetry_independent_sites' to
        'use_special_position_disorder'.
    - COD::AtomProperties:
      - the van der Waals radius of the hydrogen atom from 1.09 to 1.2.