@@ -1,18 +1,3 @@
 tests/scripts/cif_parser_test: tests/cases/cif_parser_test_030.inp(2,1): ERROR, incorrect CIF syntax:
  _chemical_name_systemÃÂ2tic 
  ^
-tests/scripts/cif_parser_test: tests/cases/cif_parser_test_030.inp(2,1): ERROR, incorrect CIF syntax:
- _chemical_name_systemÃÂ2tic 
- ^
-tests/scripts/cif_parser_test: tests/cases/cif_parser_test_030.inp(2,1): ERROR, incorrect CIF syntax:
- _chemical_name_systemÃÂ2tic 
- ^
-tests/scripts/cif_parser_test: tests/cases/cif_parser_test_030.inp(2,1): ERROR, incorrect CIF syntax:
- _chemical_name_systemÃÂ2tic 
- ^
-tests/scripts/cif_parser_test: tests/cases/cif_parser_test_030.inp(2,1): ERROR, incorrect CIF syntax:
- _chemical_name_systemÃÂ2tic 
- ^
-tests/scripts/cif_parser_test: tests/cases/cif_parser_test_030.inp(2,1): ERROR, incorrect CIF syntax:
- _chemical_name_systemÃÂ2tic 
- ^
