@@ -1,9 +1,6 @@
 tests/scripts/cif_parser_test: tests/cases/cif_parser_test_067.inp(2,1): ERROR, incorrect CIF syntax:
  _t·ag 
  ^
-tests/scripts/cif_parser_test: tests/cases/cif_parser_test_067.inp(2,1): ERROR, incorrect CIF syntax:
- _t·ag 
- ^
 tests/scripts/cif_parser_test: tests/cases/cif_parser_test_067.inp(2,8) data_multi: ERROR, incorrect CIF syntax:
  _t·ag test····
         ^
