@@ -1,5 +1,9 @@
 cod-tools (unreleased)
 
+  * Fixed:
+    - codcif:
+      - optimized detection and reporting of control characters.
+
 cod-tools (2.6)
 
   * Added:
